--- a/src/mdtserialport/CMakeLists.txt
+++ b/src/mdtserialport/CMakeLists.txt
@@ -74,10 +74,10 @@ endif(MDT_BUILD_STATIC_LIBS)
 
 # Headers to install
 file(GLOB INSTALL_HEADERS *.h)
-install (FILES ${INSTALL_HEADERS} DESTINATION "${HEADERS_DEST_DIR}/mdtserialport")
+install(FILES ${INSTALL_HEADERS} DESTINATION "${HEADERS_DEST_DIR}/mdtserialport" COMPONENT dev)
 
 # Destinations
-install (TARGETS "mdtserialport" DESTINATION "${LIB_DEST_DIR}")
+install(TARGETS "mdtserialport" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
 if(MDT_BUILD_STATIC_LIBS)
-  install (TARGETS "mdtserialport_static" DESTINATION "${LIB_DEST_DIR}")
+  install(TARGETS "mdtserialport_static" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
 endif(MDT_BUILD_STATIC_LIBS)
