--- a/src/mdttools/CMakeLists.txt
+++ b/src/mdttools/CMakeLists.txt
@@ -56,10 +56,10 @@ endif(MDT_BUILD_STATIC_LIBS)
 
 # Headers to install
 file(GLOB INSTALL_HEADERS *.h)
-install (FILES ${INSTALL_HEADERS} DESTINATION "${HEADERS_DEST_DIR}/mdttools")
+install(FILES ${INSTALL_HEADERS} DESTINATION "${HEADERS_DEST_DIR}/mdttools" COMPONENT dev)
 
 # Destinations
-install (TARGETS "mdttools" DESTINATION "${LIB_DEST_DIR}")
+install(TARGETS "mdttools" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
 if(MDT_BUILD_STATIC_LIBS)
-  install (TARGETS "mdttools_static" DESTINATION "${LIB_DEST_DIR}")
+  install(TARGETS "mdttools_static" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
 endif(MDT_BUILD_STATIC_LIBS)
