--- a/src/mdtutilsgui/CMakeLists.txt
+++ b/src/mdtutilsgui/CMakeLists.txt
@@ -73,10 +73,10 @@ endif(MDT_BUILD_STATIC_LIBS)
 
 # Headers to install
 file(GLOB INSTALL_HEADERS *.h)
-install (FILES ${INSTALL_HEADERS} DESTINATION "${HEADERS_DEST_DIR}/mdtutilsgui")
+install(FILES ${INSTALL_HEADERS} DESTINATION "${HEADERS_DEST_DIR}/mdtutilsgui" COMPONENT dev)
 
 # Destinations
-install (TARGETS "mdtutilsgui" DESTINATION "${LIB_DEST_DIR}")
+install(TARGETS "mdtutilsgui" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
 if(MDT_BUILD_STATIC_LIBS)
-  install (TARGETS "mdtutilsgui_static" DESTINATION "${LIB_DEST_DIR}")
+  install(TARGETS "mdtutilsgui_static" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
 endif(MDT_BUILD_STATIC_LIBS)
