Added mdtPortLock class + some work on mdtApplication
mdtPortLock was created to handle lockFiles on POSIX systems. Without it,
the serial port classe could open a locked port.
At ths state, two mechanisms are used:
 - Search about LCK..PORTNAME files in /var/lock and /tmp
 - Lock port with fcntl()

In mdtApplication, some access methods are added.

--- a/config.h.in
+++ b/config.h.in
@@ -8,9 +8,9 @@
 */
 
 /* Version */
-#define VERSION_MAJOR @VERSION_MAJOR@
-#define VERSION_MINOR @VERSION_MINOR@
-#define VERSION_MICRO @VERSION_MICRO@
+#define MDTLIB_VERSION_MAJOR @MDTLIB_VERSION_MAJOR@
+#define MDTLIB_VERSION_MINOR @MDTLIB_VERSION_MINOR@
+#define MDTLIB_VERSION_MICRO @MDTLIB_VERSION_MICRO@
 
 /* Utilisation des assertions avec assert() */
 #define USE_ASSERT @USE_ASSERT@
