Added mdtFileCopier class
mdtFileCopier is a helper class that handle some dialog with the user,
like "Destination file exists, erase ?", shows a progress bar, ...
It's possible to add many files before do the checks (so user don't have to
click 100x yes, or no).
Some basic tests where done on Linux and wine.
Some more work is to be done:
 - Write correct unit test
 - Clean the currently, somewath ugly, code
 - Comments in mdtFileCopier + mdtFileCopierItem.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,8 @@ configure_file (
 )
 
 # Some flags for compiler
-add_definitions("-Wall -ansi -lm")
+add_definitions("-Wall -ansi -O2 -lm")
+#add_definitions("-Wall -ansi -lm")
 
 # We want GUI executables on Windows (not console)
 if(WIN32)
