Bug corrections in mdtFileCopier + first stepts with valgrind
Found a bug in mdtFileCopier:
 After each read/write call, a new value was sended to the progress dialog,
 causing >100'000 call/sec. Fisrt fix was made based on a minimal
 count of bytes in progress before the update was made, but this not
 worked for little copies.. Now, QElapsedTimer is used, and the new value is emitted
 all 40ms.

In tests/mdtutils/ :
 To be able to use valgrind, it is less painfull to have an executable for each
 test. For now, mdtFileTest has a separate executable.
 Later, this could be the approach for all tests.

Valgrind:
 I'm descovering Valgrind this time, so made some first trys..
 A suppression file was made for Qt4.7.
 A .valgrindrc file was also made in root directory of the project,
 witch automatically calls this suppression file + other usefulle options.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,12 +128,17 @@ endif(UNIX)
 
 # *** Unit tests section ***
 
-# * Unit tests compilation *
+# ** Unit tests compilation **
 add_subdirectory("${PROJECT_SOURCE_DIR}/tests")
 
-# * Unit tests execution *
+# ** Unit tests execution **
 enable_testing()
+
+# * mdtutils *
 add_test (mdtUtilsTest ${CMAKE_CURRENT_BINARY_DIR}/tests/mdtutils/mdtUtilsTest)
+# mdtFileTest
+add_test (mdtFileTest ${CMAKE_CURRENT_BINARY_DIR}/tests/mdtutils/mdtfiletest)
+
 # NOTE: Support Windows pas terminé
 if(UNIX)
 add_test (mdtPortTest ${CMAKE_CURRENT_BINARY_DIR}/tests/mdtport/mdtPortTest)
@@ -220,7 +225,7 @@ if(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
   # Some Debian package specific varaibles
   if(UNIX)
     set(CPACK_DEB_COMPONENT_INSTALL ON)
-    set(CPACK_DEBIAN_PACKAGE_DEPENDS "libqtcore4 (>= 4:4.5.0), libqtgui4 (>= 4:4.5.0), libstdc++6 , libgcc1 , libc6")
+    set(CPACK_DEBIAN_PACKAGE_DEPENDS "libqtcore4 (>= 4:4.7.0), libqtgui4 (>= 4:4.7.0), libstdc++6 , libgcc1 , libc6")
     set(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
     set(CPACK_DEBIAN_PACKAGE_SECTION "libs")
     set(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
