Work on translation support + bug correction in mdtErrorOut
Translation support:
mdtApplication can now load .qm files in a list of paths, and is able to create
 a list of available translations.
mdtterm + mdtPortTerm gives an example how to generate a language menu
 with supported languages.

Bug in mdtErrorOut:
 On Windows (tested on Wine+MinGW32), some entry was not appended to
 log file, but file was erased.
 Replacing QFile with ANSI C calls (fopen, fwrite, ...) fixed the problem.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -209,6 +209,9 @@ if(WIN32)
   install(FILES ${QTNETWORKDLL} DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
   #install(DIRECTORY "${PROJECT_SOURCE_DIR}/data" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
   install(DIRECTORY "${PROJECT_SOURCE_DIR}/data" DESTINATION "." COMPONENT lib)
+  # Qt translations files
+  install(FILES "${QT_TRANSLATIONS_DIR}/qt_fr.qm" DESTINATION "data/i18n" COMPONENT lib)
+  install(FILES "${QT_TRANSLATIONS_DIR}/qt_de.qm" DESTINATION "data/i18n" COMPONENT lib)
 endif(WIN32)
 
 # ** CPack section **
