--- a/tests/mdtserialport/CMakeLists.txt
+++ b/tests/mdtserialport/CMakeLists.txt
@@ -5,33 +5,12 @@
 # Project
 project (multidiagtools)
 
-# Liste des fichiers d'entêtes Qt (entêtes contenant Q_OBJECT)
-set (HEADER_FILES 
-          mdtSerialPortTest.h
-    )
 
-
-# Liste des fichiers sources
-set (SOURCES_FILES 
-          mdtSerialPortTest.cpp
-          main.cpp
-    )
-
-
-# Fichiers à traiter par le compilateur moc
-QT4_WRAP_CPP (MOC_HEADERS ${HEADER_FILES})
-
-# Fichiers à traiter par le compilateur uic
-QT4_WRAP_UI (UIC_HEADERS ${FORM_FILES})
-
-# Fichiers à traiter par le compilateur rcc
-QT4_ADD_RESOURCES (RCC_FILES ${RESOURCE_FILES})
-
-# Exécutable
-add_executable (mdtSerialPortTest ${SOURCES_FILES} ${MOC_HEADERS} ${UIC_HEADERS} ${RCC_FILES})
-# Libraires à lier
-target_link_libraries(mdtSerialPortTest "mdtutils")
-target_link_libraries(mdtSerialPortTest "mdtport")
-target_link_libraries(mdtSerialPortTest "mdtserialport")
-target_link_libraries(mdtSerialPortTest "mdttest")
-target_link_libraries(mdtSerialPortTest ${QT_LIBRARIES})
+# Target mdtSerialPortTest
+QT4_WRAP_CPP (MOC_HEADERS mdtSerialPortTest.h)
+add_executable (mdtserialporttest mdtSerialPortTest.cpp ${MOC_HEADERS})
+target_link_libraries(mdtserialporttest "mdtutils")
+target_link_libraries(mdtserialporttest "mdtport")
+target_link_libraries(mdtserialporttest "mdtserialport")
+target_link_libraries(mdtserialporttest "mdttest")
+target_link_libraries(mdtserialporttest ${QT_LIBRARIES})
