Working on mdtUsbPort class. This is a intermediate commit for backup purprose, things are ugly at this time..

--- a/src/mdtutils/CMakeLists.txt
+++ b/src/mdtutils/CMakeLists.txt
@@ -32,6 +32,7 @@ set (SOURCES_FILES
           mdtFrameCodecScpi.cpp
           mdtFrameCodecScpiU3606A.cpp
           mdtFrameCodecModbus.cpp
+          mdtFrameCodecK8055.cpp
           # mdtError
           mdtError.cpp
           mdtErrorOut.cpp
